# weather

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CREDITS.md  README.md  Weather  build.sh  com.github.bitseater.weather.json  compile.sh  meson-fix.patch  meson.build  quick.sh  translate.sh  travis.yml  uninstall.sh
.snapcraft/: travis_snapcraft.cfg
appimage/: appimage.sh
builders/: snapcraft.yaml
data/: Weather.desktop  appimage.sh  application.css  com.github.bitseater.weather.appdata.xml  com.github.bitseater.weather.appdata.xml.in  com.github.bitseater.weather.desktop  com.github.bitseater.weather.desktop.in  com.github.bitseater.weather.gresource.xml  com.github.bitseater.weather.gschema.xml  meson.build
debian/: changelog  control  copyright  rules
meson/: post_install.py
po/: LINGUAS  POTFILES.in  README.md  ca.po  com.github.bitseater.weather.pot  de.po  en.po  es.po  es_ES.po  fr.po  lt.po  nl_NL.po  pt.po  pt_BR.po  pt_BR.po~  pt_PT.po  ru.mo  ru.po  update_po.sh  weather.pot
snap/: snapcraft.yaml  snapcraft.yaml.back
snap/gui/: meteo.desktop
src/: Constants.vala  MainWindow.vala  Weather  Weather.vala  compile.sh  config.vala
src/Utils/: GeoLocate.vala  Iconame.vala  MapCity.vala  MapLayer.vala  MiniMap.vala  OWM_Today.vala  Utils.vala
src/Widgets/: About.vala  Apikey.vala  City.vala  Current.vala  Forecast.vala  Header.vala  MapView.vala  MapViewDS.vala  MapViewOWM.vala  Preferences.vala  Ticket.vala  Today.vala  ViewFile.vala
vapi/: config.vapi
